added self4j for logging, ui updated updated visuals and added animations, added budget and chart for category wise budget, button icons added. bug fixing.